--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-hook-form": "^6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "recompose": "^0.30.0"
+    "recompose": "^0.30.0",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
